configured npayment